Musgrave texture behaves differently with OSL rendering turned on. #77681

Closed
opened 2020-06-09 14:06:13 +02:00 by Jakub Jaszewski · 8 comments

When using OSL the Musgrave Texture is giving different and unpredictable results than without OSL.

Steps to reproduce:

  1. Enable OSL support.

  2. For default cube create new material, add Musgrave Texture, preview it.

  3. Change Texture Detail over 15, and Lacunarity over 3.780. The result should look like the one on the right:
    2020-06-08-20;07;49.png

  4. For comparison disable OSL.

system-info.txt
OSL_Musgrave.blend

Caused by / Bisected to commit 23564583a4

When using OSL the Musgrave Texture is giving different and unpredictable results than without OSL. Steps to reproduce: 1. Enable OSL support. 2. For default cube create new material, add Musgrave Texture, preview it. 3. Change Texture Detail over 15, and Lacunarity over 3.780. The result should look like the one on the right: ![2020-06-08-20;07;49.png](https://archive.blender.org/developer/F8603787/2020-06-08-20_07_49.png) 4. For comparison disable OSL. [system-info.txt](https://archive.blender.org/developer/F8603775/system-info.txt) [OSL_Musgrave.blend](https://archive.blender.org/developer/F8603798/OSL_Musgrave.blend) Caused by / Bisected to commit 23564583a4

Added subscriber: @silex

Added subscriber: @silex
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Getting this assert with OSL

blender: /blender/intern/cycles/kernel/../kernel/kernel_accumulate.h:672: ccl::float3 ccl::path_radiance_clamp_and_sum(ccl::KernelGlobals*, ccl::PathRadiance*, float*): Assertion `!"Non-finite final sum in path_radiance_clamp_and_sum!"' failed.
Can confirm. Getting this assert with OSL ``` blender: /blender/intern/cycles/kernel/../kernel/kernel_accumulate.h:672: ccl::float3 ccl::path_radiance_clamp_and_sum(ccl::KernelGlobals*, ccl::PathRadiance*, float*): Assertion `!"Non-finite final sum in path_radiance_clamp_and_sum!"' failed. ```
Member

This is caused by 23564583a4

This is caused by 23564583a4

This issue was referenced by blender/cycles@527992c425

This issue was referenced by blender/cycles@527992c4251ecb58f97b81228d5647dae7a079cf

This issue was referenced by 48e2a15160

This issue was referenced by 48e2a15160d276c8080cd8d4f6dc0ba752dbb410

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-02 19:33:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77681
No description provided.