intern/cycles/kernel/svm/musgrave.h
@@ -737,7 +737,7 @@ ccl_device_noinline int svm_node_tex_musgrave(KernelGlobals kg,
   float gain = stack_load_float_default(stack, gain_stack_offset, defaults2.z);
 
   dimension = fmaxf(dimension, 1e-5f);
-  detail = clamp(detail, 0.0f, 16.0f);
+  detail = clamp(detail, 0.0f, 15.0f);
   lacunarity = fmaxf(lacunarity, 1e-5f);
 
   float fac;
