source/blender/gpu/shaders/material/gpu_shader_material_fractal_noise.glsl
@@ -5,7 +5,7 @@ float fractal_noise(float p, float octaves, float roughness)
   float amp = 1.0;
   float maxamp = 0.0;
   float sum = 0.0;
-  octaves = clamp(octaves, 0.0, 16.0);
+  octaves = clamp(octaves, 0.0, 15.0);
   int n = int(octaves);
   for (int i = 0; i <= n; i++) {
     float t = noise(fscale * p);
@@ -34,7 +34,7 @@ float fractal_noise(vec2 p, float octaves, float roughness)
   float amp = 1.0;
   float maxamp = 0.0;
   float sum = 0.0;
-  octaves = clamp(octaves, 0.0, 16.0);
+  octaves = clamp(octaves, 0.0, 15.0);
   int n = int(octaves);
   for (int i = 0; i <= n; i++) {
     float t = noise(fscale * p);
@@ -63,7 +63,7 @@ float fractal_noise(vec3 p, float octaves, float roughness)
   float amp = 1.0;
   float maxamp = 0.0;
   float sum = 0.0;
-  octaves = clamp(octaves, 0.0, 16.0);
+  octaves = clamp(octaves, 0.0, 15.0);
   int n = int(octaves);
   for (int i = 0; i <= n; i++) {
     float t = noise(fscale * p);
@@ -92,7 +92,7 @@ float fractal_noise(vec4 p, float octaves, float roughness)
   float amp = 1.0;
   float maxamp = 0.0;
   float sum = 0.0;
-  octaves = clamp(octaves, 0.0, 16.0);
+  octaves = clamp(octaves, 0.0, 15.0);
   int n = int(octaves);
   for (int i = 0; i <= n; i++) {
     float t = noise(fscale * p);
